2001-10-12  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* ControlTexinfo.C (getContents): use the right file for .sty files

2001-10-10  Herbert Voss  <voss@perce.de>

	* ControlTexinfo.C: new path for the shellscript TeXFiles.sh
	and some more stuff from FormTexinfo.C
	
	* ControlShowFile.C: hiding the update-button

2001-10-09  Herbert Voss  <voss@perce.de>

	* ControlTexinfo.[Ch]: new files. Display information about the
	installed texfiles (cls,sty,bst).

	* ControlShowFile.[Ch]: new files. Display the contents of a file.

	* GUI.h: added classes GUIShowFile and GUITexinfo.

	* Makefile.am: modified appropriately.

2001-10-03  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>

	* ControlAboutlyx.C (getVersion): use lyx_version and
	lyx_release_date instead of old macros

2001-09-27  Angus Leeming  <a.leeming@ic.ac.uk>

	* ControlSpellchecker.C (check): Behaves well now when the spell
	library doesn't know a replacement to an incorrect word.

2001-09-27  Angus Leeming  <a.leeming@ic.ac.uk>

	* ControlSpellchecker.C (clearParams): place emergency_exit_ in
	the correct place. Can now check spelling more than once!

2001-09-27  Angus Leeming  <a.leeming@ic.ac.uk>

	* ControlSplash.[Ch]: removed.

	* GUI.h: remove GUISplash class.

	* ViewBase.h: remove ViewSplash class.

	* Makefile.am: remove ControlSplash.[Ch].

2001-09-25  Angus Leeming  <a.leeming@ic.ac.uk>

	* ControlButtons.h: add variable emergency_exit_. If set to true, the
	view will be shut down.

	* ControlDialogs.h:
	* ControlInset.h: act on emergency_exit_.

	* ControlSpellchecker.C (clearParams): set emergency_exit_ if the
	speller fails to launch.

2001-09-24  Angus Leeming  <a.leeming@ic.ac.uk>

	* ControlRef.C (getBufferList): use MakeDisplayPath on the list.
	* (getLabelList): use MakeAbsPath on the buffer name passed to it.

2001-09-21  Angus Leeming  <a.leeming@ic.ac.uk>

	* ControlRef.h (disconnectOnApply): new method. Set to true.
	Perhaps make this user-modifiable?
